--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Mattia Tomeo <tomeo.mat@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "^3.10"
 numpy = "^1.21.4"
 
 [tool.poetry.dev-dependencies]
